tests/ui/rfc-2627-raw-dylib/link-ordinal-invalid-format.stderr
error: illegal ordinal format in `link_ordinal`
  --> $DIR/link-ordinal-invalid-format.rs:5:5
   |
LL |     #[link_ordinal("JustMonika")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: an unsuffixed integer value, e.g., `1`, is expected

error: illegal ordinal format in `link_ordinal`
  --> $DIR/link-ordinal-invalid-format.rs:8:5
   |
LL |     #[link_ordinal("JustMonika")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: an unsuffixed integer value, e.g., `1`, is expected

error: aborting due to 2 previous errors

